# pire

./: .gitignore  Cargo.toml  README.md  TODO.md
benchmark/bench/: Cargo.toml  build.rs  hw_info.txt  process_csv.py  process_json.py
benchmark/bench/benches/: bench.rs
benchmark/bench/benchmark_results/: benchmark_result_0.json  benchmark_result_1.json  benchmark_result_2.json  benchmark_result_3.json  benchmark_result_4.json
benchmark/bench/benchmark_results/benchmark_run_0/: benchmark_results_0.json  benchmark_results_1.json  benchmark_results_10.json  benchmark_results_11.json  benchmark_results_12.json  benchmark_results_13.json  benchmark_results_2.json  benchmark_results_3.json  benchmark_results_4.json  benchmark_results_5.json  benchmark_results_6.json  benchmark_results_7.json  benchmark_results_8.json  benchmark_results_9.json
benchmark/bench/benchmark_results/benchmark_run_1/: benchmark_results_0.json  benchmark_results_1.json  benchmark_results_10.json  benchmark_results_11.json  benchmark_results_12.json  benchmark_results_13.json  benchmark_results_2.json  benchmark_results_3.json  benchmark_results_4.json  benchmark_results_5.json  benchmark_results_6.json  benchmark_results_7.json  benchmark_results_8.json  benchmark_results_9.json
benchmark/bench/benchmark_results/benchmark_run_2/: benchmark_results_0.json  benchmark_results_1.json  benchmark_results_10.json  benchmark_results_11.json  benchmark_results_12.json  benchmark_results_13.json  benchmark_results_14.json  benchmark_results_15.json  benchmark_results_2.json  benchmark_results_3.json  benchmark_results_4.json  benchmark_results_5.json  benchmark_results_6.json  benchmark_results_7.json  benchmark_results_8.json  benchmark_results_9.json
benchmark/bench/benchmark_results/benchmark_run_3/: benchmark_results_0.json  benchmark_results_1.json  benchmark_results_10.json  benchmark_results_11.json  benchmark_results_12.json  benchmark_results_13.json  benchmark_results_14.json  benchmark_results_15.json  benchmark_results_16.json  benchmark_results_17.json  benchmark_results_2.json  benchmark_results_3.json  benchmark_results_4.json  benchmark_results_5.json  benchmark_results_6.json  benchmark_results_7.json  benchmark_results_8.json  benchmark_results_9.json
benchmark/bench/benchmark_results/benchmark_run_4/: benchmark_results_0.json  benchmark_results_1.json  benchmark_results_10.json  benchmark_results_11.json  benchmark_results_12.json  benchmark_results_13.json  benchmark_results_2.json  benchmark_results_3.json  benchmark_results_4.json  benchmark_results_5.json  benchmark_results_6.json  benchmark_results_7.json  benchmark_results_8.json  benchmark_results_9.json
benchmark/bench/results/: out_f16_v2.txt  out_f32_v0.txt
benchmark/bench/src/: hardware.rs  lib.rs  main.rs
corenum-gemm-f32/: Cargo.toml
corenum-gemm-f32/src/: lib.rs  main.rs  reference.rs
corenum-gemm-f32/src/armv8/: mod.rs
corenum-gemm-f32/src/avx512f/: mod.rs
corenum-gemm-f32/src/avx_fma/: mod.rs
corenum-gemm-f32/src/haswell/: mod.rs
crates/: Cargo.toml  rustfmt.toml
crates/.cargo/: config.toml
crates/corenum-base/: Cargo.toml
crates/corenum-base/src/: lib.rs
crates/corenum-dev/: Cargo.toml
crates/corenum-dev/src/: lib.rs
crates/corenum-gemm-c32/: Cargo.toml
crates/corenum-gemm-c64/: Cargo.toml
crates/corenum-gemm-c64/src/: lib.rs
crates/corenum-gemm-f16/: Cargo.toml
crates/corenum-gemm-f16/src/: lib.rs  main.rs  reference.rs
crates/corenum-gemm-f32/: Cargo.toml
crates/corenum-gemm-f32/src/: lib.rs  reference.rs
crates/corenum-gemm-f64/: Cargo.toml
crates/corenum-gemm-f64/src/: lib.rs
crates/corenum-gemm-s16s16s32/: Cargo.toml
crates/corenum-gemm-s16s16s32/src/: lib.rs
crates/glar-base/: Cargo.toml
crates/glar-base/src/: lib.rs  range_rwlock.rs
crates/glar-dev/: Cargo.toml  build.rs
crates/glar-dev/src/: lib.rs
crates/glar-gemm-c32/: Cargo.toml
crates/glar-gemm-c32/src/: lib.rs  reference.rs
crates/glar-gemm-c64/: Cargo.toml
crates/glar-gemm-c64/src/: lib.rs  reference.rs
crates/glar-gemm-f16/: Cargo.toml
crates/glar-gemm-f16/src/: lib.rs  reference.rs
crates/glar-gemm-f32/: Cargo.toml
crates/glar-gemm-f32/src/: lib.rs  reference.rs
crates/glar-gemm-f64/: Cargo.toml
crates/glar-gemm-f64/src/: lib.rs  reference.rs
crates/glar-gemm-s16s16s32/: Cargo.toml
crates/glar-gemm-s16s16s32/src/: lib.rs  reference.rs
crates/glar-gemm-s8u8s32/: Cargo.toml
crates/glar-gemm-s8u8s32/src/: lib.rs  reference.rs
crates/glare-base/: Cargo.toml
crates/glare-base/src/: lib.rs
crates/glare-dev/: Cargo.toml  build.rs
crates/glare-dev/src/: lib.rs
crates/glare-gemm-c32/: Cargo.toml
crates/glare-gemm-c32/src/: lib.rs  reference.rs
crates/glare-gemm-c64/: Cargo.toml
crates/glare-gemm-c64/src/: lib.rs  reference.rs
crates/glare-gemm-f16/: Cargo.toml
crates/glare-gemm-f16/src/: lib.rs  reference.rs
crates/glare-gemm-f32/: Cargo.toml
crates/glare-gemm-f32/src/: lib.rs  reference.rs
crates/glare-gemm-f64/: Cargo.toml
crates/glare-gemm-f64/src/: lib.rs  reference.rs
crates/glare-gemm-s16s16s32/: Cargo.toml
crates/glare-gemm-s16s16s32/src/: lib.rs  reference.rs
crates/glare-gemm-s8u8s32/: Cargo.toml
crates/glare-gemm-s8u8s32/src/: lib.rs  reference.rs
crates/pire-base/: Cargo.toml
crates/pire-base/src/: lib.rs  range_rwlock.rs
crates/pire-dev/: Cargo.toml
crates/pire-dev/src/: lib.rs
crates/pire-gemm-c32/: Cargo.toml
crates/pire-gemm-c32/src/: lib.rs  reference.rs
crates/pire-gemm-c64/: Cargo.toml
crates/pire-gemm-c64/src/: lib.rs  reference.rs
crates/pire-gemm-f16/: Cargo.toml  LICENSE
crates/pire-gemm-f16/src/: lib.rs  reference.rs
crates/pire-gemm-f32/: Cargo.toml
crates/pire-gemm-f32/src/: lib.rs  reference.rs
crates/pire-gemm-f64/: Cargo.toml
crates/pire-gemm-f64/src/: lib.rs  reference.rs
crates/pire-gemm-s16s16s32/: Cargo.toml
crates/pire-gemm-s16s16s32/src/: lib.rs  reference.rs
crates/pire-gemm-s8u8s32/: Cargo.toml
crates/pire-gemm-s8u8s32/src/: lib.rs  reference.rs
crates/pire-mathfun/: Cargo.toml
(+495 files in other folders)
