[package]
name = "corenum-gemm-f32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~4.0", features = ["unicode", "derive"] }
const-str = "~0.3.0"
corenum-base = { path = "../corenum-base" }
corenum-dev = { path = "../corenum-dev" }
seq-macro = "0.3.5"
paste = "1.0.14"

[features]
default = []
mkl_check = ["corenum-dev/mkl"]
mkl = ["corenum-dev/mkl"]
blis = ["corenum-dev/blis"]
blasfeo = ["corenum-dev/blasfeo"]
corenum = []
rustgemm = []