[workspace]
members = [
    "pire-base", "pire-dev", "pire-gemm-f16", "pire-gemm-f32", "pire-gemm-f64", "pire-gemm-c32", "pire-gemm-c64", "pire-gemm-s16s16s32", "pire-gemm-s8u8s32"
]
resolver = "2"


[workspace.dependencies]
seq-macro = "0.3"
paste = "1.0"
once_cell = { version = "1.20" }
half = { version = "2.4", default-features = false }
aligned-vec = "0.6.1"