[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
glare-base = { path = "../../crates/glare-base" }
glare-gemm-f32 = { path = "../../crates/glare-gemm-f32" }
glare-gemm-f64 = { path = "../../crates/glare-gemm-f64" }
glare-gemm-f16 = { path = "../../crates/glare-gemm-f16" }
glare-gemm-s16s16s32 = { path = "../../crates/glare-gemm-s16s16s32" }
glare-gemm-s8u8s32 = { path = "../../crates/glare-gemm-s8u8s32" }
glare-gemm-c32 = { path = "../../crates/glare-gemm-c32" }
glare-gemm-c64 = { path = "../../crates/glare-gemm-c64" }
glare-dev = { path = "../../crates/glare-dev" }
clap = {version = "~4.0", features = ["unicode", "derive"] }
gemm = {git = "https://github.com/sarah-ek/gemm", optional = true }
num-complex = { version = "0.4.6", features = ["rand"] }
half = { version = "2.4.1", features = ["rand_distr", "num-traits"] }

[dev-dependencies]
criterion = "0.5"
num-traits = "0.2.19"

[[bench]]
name = "bench"
harness = false



[features]
default = []
mkl_check = []
mkl = ["glare-dev/mkl"]
blis = ["glare-dev/blis"]
blasfeo = []
glare = []
rustgemm = ["dep:gemm"]