[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
raw-cpuid = {version = "11.1.0", git = "https://github.com/gz/rust-cpuid.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
glar-base = { path = "../../crates/glar-base" }
glar-gemm-f32 = { path = "../../crates/glar-gemm-f32" }
glar-gemm-f64 = { path = "../../crates/glar-gemm-f64" }
glar-gemm-f16 = { path = "../../crates/glar-gemm-f16" }
glar-gemm-s16s16s32 = { path = "../../crates/glar-gemm-s16s16s32" }
glar-gemm-s8u8s32 = { path = "../../crates/glar-gemm-s8u8s32" }
glar-gemm-c32 = { path = "../../crates/glar-gemm-c32" }
glar-gemm-c64 = { path = "../../crates/glar-gemm-c64" }
glar-dev = { path = "../../crates/glar-dev" }
clap = {version = "~4.0", features = ["unicode", "derive"] }
gemm = {git = "https://github.com/sarah-ek/gemm", optional = true }
num-complex = { version = "0.4.6", features = ["rand"] }
half = { version = "2.4.1", features = ["rand_distr", "num-traits"] }

[dev-dependencies]
criterion = "0.5"
num-traits = "0.2.19"

[[bench]]
name = "bench"
harness = false



[features]
default = []
mkl_check = []
mkl = ["glar-dev/mkl"]
openblas = ["glar-dev/openblas"]
blis = ["glar-dev/blis"]
blasfeo = []
glar = []
rustgemm = ["dep:gemm"]