[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
raw-cpuid = {version = "11.1.0", git = "https://github.com/gz/rust-cpuid.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pire-base = { path = "../../crates/pire-base" }
pire-gemm-f32 = { path = "../../crates/pire-gemm-f32" }
pire-gemm-f64 = { path = "../../crates/pire-gemm-f64" }
pire-gemm-f16 = { path = "../../crates/pire-gemm-f16" }
pire-gemm-s16s16s32 = { path = "../../crates/pire-gemm-s16s16s32" }
pire-gemm-s8u8s32 = { path = "../../crates/pire-gemm-s8u8s32" }
pire-gemm-c32 = { path = "../../crates/pire-gemm-c32" }
pire-gemm-c64 = { path = "../../crates/pire-gemm-c64" }
pire-dev = { path = "../../crates/pire-dev" }
clap = {version = "~4.0", features = ["unicode", "derive"] }
gemm = {git = "https://github.com/sarah-ek/gemm", optional = true }
num-complex = { version = "0.4.6", features = ["rand"] }
half = { version = "2.4.1", features = ["rand_distr", "num-traits"] }

[dev-dependencies]
criterion = "0.5"
num-traits = "0.2.19"

[[bench]]
name = "bench"
harness = false



[features]
default = ["pire"]
pire = []
mkl_check = []
mkl = ["pire-dev/mkl"]
blis = []
openblas = []
rustgemm = ["dep:gemm"]