[package]
name = "corenum-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18"
raw-cpuid = "11.0.2"
half = { version = "2.4.1", optional = true }

[features]
default = []
f16 = ["dep:half"]