[package]
name = "corenum-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand = "0.8.5"
half = { version = "2.4.1", features = ["rand_distr", "num-traits"] }

[features]
default = ["mkl"]
mkl = []
blis = []
blasfeo = []