[package]
name = "corenum-gemm-c32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# const-str = "~0.3.0"
corenum-base = { path = "../corenum-base" }
seq-macro = "0.3.5"
paste = "1.0.14"
num-complex = { version = "0.4.6"}

[dev-dependencies]
corenum-dev = { path = "../../crates/corenum-dev" }

[features]
default = []
