[package]
name = "corenum-gemm-f16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corenum-base = { path = "../corenum-base", features = ["f16"] }
seq-macro = "0.3.5"
paste = "1.0.14"
half = "2.4.1"

[dev-dependencies]
corenum-dev = { path = "../../crates/corenum-dev" }


[features]
default = []