[package]
name = "glar-base"
version = "0.1.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high performance cpu kernels"
license = "MIT"
keywords = ["high-performance", "math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18"
# latest version with bf16 is not released yet, fix when released
raw-cpuid = {version = "11.1.0", git = "https://github.com/gz/rust-cpuid.git" }

[features]
default = []

[dev-dependencies]
glar-dev = { path = "../../crates/glar-dev" }
