[package]
name = "glar-dev"
version = "0.1.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high performance cpu kernels"
license = "MIT"
keywords = ["high-performance", "math", "linear-algebra", "kernel"]

[dependencies]
libloading = "0.8.5"
once_cell = { workspace = true }
libc = "0.2"
rand = "0.8.5"
half = { workspace = true, features = ["rand_distr"] }
num-complex = { version = "0.4.6"}

[features]
default = []
mkl = []
