[package]
name = "glar-gemm-f32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glar-base = { version = "0.1.0", path = "../glar-base" }
seq-macro = "0.3.5"
paste = "1.0.14"

[dev-dependencies]
glar-dev = { path = "../../crates/glar-dev" }

[features]
default = []
fuse = []