[package]
name = "glar-gemm-f32"
version = "0.1.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high performance cpu kernels"
license = "MIT"
keywords = ["high-performance", "math"]

[dependencies]
glar-base = { version = "0.1.0", path = "../glar-base" }
seq-macro = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
glar-dev = { version = "0.1.0", path = "../../crates/glar-dev" }

[features]
default = []
fuse = []