[package]
name = "glare-gemm-c32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glare-base = { path = "../glare-base" }
seq-macro = "0.3.5"
paste = "1.0.14"
num-complex = { version = "0.4.6"}

[dev-dependencies]
glare-dev = { path = "../../crates/glare-dev" }

[features]
default = []
fuse = []