[package]
name = "glare-gemm-f64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glare-base = { path = "../glare-base" }
seq-macro = "0.3.5"
paste = "1.0.14"

[dev-dependencies]
glare-dev = { path = "../../crates/glare-dev" }

[features]
default = []
fuse = []