[package]
name = "pire-gemm-c64"
version = "0.1.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high performance cpu kernels"
license = "MIT"
keywords = ["high-performance", "math", "linear-algebra", "kernel"]
rust-version = "1.65"

[dependencies]
pire-base = { version = "0.1.0", path = "../pire-base" }
seq-macro = { workspace = true }
paste = { workspace = true }
num-complex = { version = "0.4.6"}

[dev-dependencies]
pire-dev = { version = "0.1.0", path = "../../crates/pire-dev" }
aligned-vec = { workspace = true }

[features]
default = []
fuse = []