[package]
name = "pire-gemm-f16"
version = "0.1.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high performance cpu kernels"
license = "MIT"
keywords = ["high-performance", "math", "linear-algebra", "kernel"]
rust-version = "1.70"

[dependencies]
pire-base = { version = "0.1.0", path = "../pire-base" }
seq-macro = { workspace = true }
paste = { workspace = true }
half = { workspace = true }

[dev-dependencies]
pire-dev = { version = "0.1.0", path = "../../crates/pire-dev" }


[features]
default = []
fuse = []